<resources>
    <string name="app_name">Intents</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_speechintent">Speech Intent</string>
    <string name="action_multipleintents">Various Intents</string>
    <string name="lbl_click_here">Click here to say something</string>
    <string name="title_activity_various_intents">VariousIntents</string>
    <string name="action_settings">Settings</string>
    <string name="lbl_open_website">Open Website</string>
    <string name="lbl_open_contacts">Open Contacts</string>
    <string name="lbl_open_dialer">Open Dialer</string>
    <string name="lbl_search_google">Search Google</string>
    <string name="lbl_start_voice_command">Start Voice Command</string>
</resources>
